devops/kubernetes/common_examples/network_policies/basic_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-traffic
spec:
  podSelector: {}
  ingress:
    - from:
      - podSelector:
        matchLabels:
          app: frontend
